# gdv

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
include/gdv/: color.h  config.h  constant.h  gdv.h  math.h  mp.h  online.h  sp.h  test.h  tween.h  version.h  window.h
include/gdv/color/: hsv.h  rgb.h
include/gdv/math/: camera.h  euler.h  matrix3x3.h  matrix4x4.h  quaternion.h  rect.h  transform.h  vector2.h  vector3.h  vector4.h  viewport.h
include/gdv/mp/: algorithm.h  all_of.h  any_of.h  bind.h  concat.h  config.h  count.h  count_if.h  for_each.h  iterator.h  none_of.h  pack_operations.h  push_back.h  push_back_if.h  push_front.h  push_front_if.h  remove.h  remove_if.h  replace.h  replace_if.h  type_list.h
include/gdv/online/: average.h  max.h  min.h  variance.h
include/gdv/sp/: ft.h  window_function.h
include/gdv/test/: test_runner.h  unit_test.h
include/gdv/tween/: back.h  bounce.h  circ.h  cubic.h  easing.h  elastic.h  expo.h  linear.h  quad.h  quart.h  quint.h  sine.h
include/gdv/window/: akaike.h  bartlett.h  bartlett_hann.h  blackman.h  gauss.h  (+10 more)
test/: CMakeLists.txt
test/mp/: CMakeLists.txt  all_of.cpp  any_of.cpp  at.cpp  back.cpp  bind.cpp  concat.cpp  count.cpp  count_if.cpp  distance.cpp  empty.cpp  equal.cpp  erase.cpp  find.cpp  find_if.cpp  find_if_not.cpp  for_each.cpp  for_each_n.cpp  head.cpp  iterator.cpp  max.cpp  min.cpp  none_of.cpp  push_back.cpp  push_back_if.cpp  push_front.cpp  push_front_if.cpp  remove.cpp  remove_if.cpp  replace.cpp  replace_if.cpp  reverse.cpp  size.cpp  tail.cpp  transform.cpp  type_list.cpp
(+1 files in other folders)
